hw2/parser.output
   0  $accept : %entry% $end

   1  program : block EOF

   2  block : LBRACE decls stmts RBRACE

   3  decls : decls decl
   4        |

   5  decl : tp ID SEMICOLON

   6  tp : INT
   7     | INT LBLOCK NUM RBLOCK

   8  stmts : stmts stmt
   9        |

  10  stmt : lv EQUAL exp SEMICOLON
  11       | lv PLUS PLUS SEMICOLON
  12       | IF LPAREN exp RPAREN stmt
  13       | IF LPAREN exp RPAREN stmt ELSE stmt
  14       | WHILE LPAREN exp RPAREN stmt
  15       | DO stmt WHILE LPAREN exp RPAREN SEMICOLON
  16       | READ LPAREN ID RPAREN SEMICOLON
  17       | PRINT LPAREN exp RPAREN SEMICOLON
  18       | block

  19  lv : ID
  20     | ID LBLOCK exp RBLOCK

  21  exp : NUM
  22      | lv
  23      | exp PLUS exp
  24      | exp MINUS exp
  25      | exp STAR exp
  26      | exp SLASH exp
  27      | MINUS exp
  28      | exp EQUALEQUAL exp
  29      | exp LT exp
  30      | exp LE exp
  31      | exp GT exp
  32      | exp GE exp
  33      | NOT exp
  34      | exp OR exp
  35      | exp AND exp
  36      | LPAREN exp RPAREN

  37  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (37)

	LBRACE  shift 3
	.  error

	program  goto 4
	block  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	block : LBRACE . decls stmts RBRACE  (2)
	decls : .  (4)

	.  reduce 4

	decls  goto 6


state 4
	%entry% : '\001' program .  (37)

	.  reduce 37


state 5
	program : block . EOF  (1)

	EOF  shift 7
	.  error


state 6
	block : LBRACE decls . stmts RBRACE  (2)
	decls : decls . decl  (3)
	stmts : .  (9)

	INT  shift 8
	ID  reduce 9
	IF  reduce 9
	WHILE  reduce 9
	DO  reduce 9
	READ  reduce 9
	PRINT  reduce 9
	LBRACE  reduce 9
	RBRACE  reduce 9

	stmts  goto 9
	decl  goto 10
	tp  goto 11


state 7
	program : block EOF .  (1)

	.  reduce 1


state 8
	tp : INT .  (6)
	tp : INT . LBLOCK NUM RBLOCK  (7)

	LBLOCK  shift 12
	ID  reduce 6


state 9
	block : LBRACE decls stmts . RBRACE  (2)
	stmts : stmts . stmt  (8)

	ID  shift 13
	IF  shift 14
	WHILE  shift 15
	DO  shift 16
	READ  shift 17
	PRINT  shift 18
	LBRACE  shift 3
	RBRACE  shift 19
	.  error

	block  goto 20
	stmt  goto 21
	lv  goto 22


state 10
	decls : decls decl .  (3)

	.  reduce 3


state 11
	decl : tp . ID SEMICOLON  (5)

	ID  shift 23
	.  error


state 12
	tp : INT LBLOCK . NUM RBLOCK  (7)

	NUM  shift 24
	.  error


state 13
	lv : ID .  (19)
	lv : ID . LBLOCK exp RBLOCK  (20)

	LBLOCK  shift 25
	PLUS  reduce 19
	MINUS  reduce 19
	STAR  reduce 19
	SLASH  reduce 19
	EQUAL  reduce 19
	EQUALEQUAL  reduce 19
	LE  reduce 19
	LT  reduce 19
	GE  reduce 19
	GT  reduce 19
	AND  reduce 19
	OR  reduce 19
	SEMICOLON  reduce 19
	RBLOCK  reduce 19
	RPAREN  reduce 19


state 14
	stmt : IF . LPAREN exp RPAREN stmt  (12)
	stmt : IF . LPAREN exp RPAREN stmt ELSE stmt  (13)

	LPAREN  shift 26
	.  error


state 15
	stmt : WHILE . LPAREN exp RPAREN stmt  (14)

	LPAREN  shift 27
	.  error


state 16
	stmt : DO . stmt WHILE LPAREN exp RPAREN SEMICOLON  (15)

	ID  shift 13
	IF  shift 14
	WHILE  shift 15
	DO  shift 16
	READ  shift 17
	PRINT  shift 18
	LBRACE  shift 3
	.  error

	block  goto 20
	stmt  goto 28
	lv  goto 22


state 17
	stmt : READ . LPAREN ID RPAREN SEMICOLON  (16)

	LPAREN  shift 29
	.  error


state 18
	stmt : PRINT . LPAREN exp RPAREN SEMICOLON  (17)

	LPAREN  shift 30
	.  error


state 19
	block : LBRACE decls stmts RBRACE .  (2)

	.  reduce 2


state 20
	stmt : block .  (18)

	.  reduce 18


state 21
	stmts : stmts stmt .  (8)

	.  reduce 8


state 22
	stmt : lv . EQUAL exp SEMICOLON  (10)
	stmt : lv . PLUS PLUS SEMICOLON  (11)

	PLUS  shift 31
	EQUAL  shift 32
	.  error


state 23
	decl : tp ID . SEMICOLON  (5)

	SEMICOLON  shift 33
	.  error


state 24
	tp : INT LBLOCK NUM . RBLOCK  (7)

	RBLOCK  shift 34
	.  error


state 25
	lv : ID LBLOCK . exp RBLOCK  (20)

	NUM  shift 35
	ID  shift 13
	MINUS  shift 36
	NOT  shift 37
	LPAREN  shift 38
	.  error

	lv  goto 39
	exp  goto 40


state 26
	stmt : IF LPAREN . exp RPAREN stmt  (12)
	stmt : IF LPAREN . exp RPAREN stmt ELSE stmt  (13)

	NUM  shift 35
	ID  shift 13
	MINUS  shift 36
	NOT  shift 37
	LPAREN  shift 38
	.  error

	lv  goto 39
	exp  goto 41


state 27
	stmt : WHILE LPAREN . exp RPAREN stmt  (14)

	NUM  shift 35
	ID  shift 13
	MINUS  shift 36
	NOT  shift 37
	LPAREN  shift 38
	.  error

	lv  goto 39
	exp  goto 42


state 28
	stmt : DO stmt . WHILE LPAREN exp RPAREN SEMICOLON  (15)

	WHILE  shift 43
	.  error


state 29
	stmt : READ LPAREN . ID RPAREN SEMICOLON  (16)

	ID  shift 44
	.  error


state 30
	stmt : PRINT LPAREN . exp RPAREN SEMICOLON  (17)

	NUM  shift 35
	ID  shift 13
	MINUS  shift 36
	NOT  shift 37
	LPAREN  shift 38
	.  error

	lv  goto 39
	exp  goto 45


state 31
	stmt : lv PLUS . PLUS SEMICOLON  (11)

	PLUS  shift 46
	.  error


state 32
	stmt : lv EQUAL . exp SEMICOLON  (10)

	NUM  shift 35
	ID  shift 13
	MINUS  shift 36
	NOT  shift 37
	LPAREN  shift 38
	.  error

	lv  goto 39
	exp  goto 47


state 33
	decl : tp ID SEMICOLON .  (5)

	.  reduce 5


state 34
	tp : INT LBLOCK NUM RBLOCK .  (7)

	.  reduce 7


state 35
	exp : NUM .  (21)

	.  reduce 21


state 36
	exp : MINUS . exp  (27)

	NUM  shift 35
	ID  shift 13
	MINUS  shift 36
	NOT  shift 37
	LPAREN  shift 38
	.  error

	lv  goto 39
	exp  goto 48


state 37
	exp : NOT . exp  (33)

	NUM  shift 35
	ID  shift 13
	MINUS  shift 36
	NOT  shift 37
	LPAREN  shift 38
	.  error

	lv  goto 39
	exp  goto 49


state 38
	exp : LPAREN . exp RPAREN  (36)

	NUM  shift 35
	ID  shift 13
	MINUS  shift 36
	NOT  shift 37
	LPAREN  shift 38
	.  error

	lv  goto 39
	exp  goto 50


state 39
	exp : lv .  (22)

	.  reduce 22


state 40
	lv : ID LBLOCK exp . RBLOCK  (20)
	exp : exp . PLUS exp  (23)
	exp : exp . MINUS exp  (24)
	exp : exp . STAR exp  (25)
	exp : exp . SLASH exp  (26)
	exp : exp . EQUALEQUAL exp  (28)
	exp : exp . LT exp  (29)
	exp : exp . LE exp  (30)
	exp : exp . GT exp  (31)
	exp : exp . GE exp  (32)
	exp : exp . OR exp  (34)
	exp : exp . AND exp  (35)

	PLUS  shift 51
	MINUS  shift 52
	STAR  shift 53
	SLASH  shift 54
	EQUALEQUAL  shift 55
	LE  shift 56
	LT  shift 57
	GE  shift 58
	GT  shift 59
	AND  shift 60
	OR  shift 61
	RBLOCK  shift 62
	.  error


state 41
	stmt : IF LPAREN exp . RPAREN stmt  (12)
	stmt : IF LPAREN exp . RPAREN stmt ELSE stmt  (13)
	exp : exp . PLUS exp  (23)
	exp : exp . MINUS exp  (24)
	exp : exp . STAR exp  (25)
	exp : exp . SLASH exp  (26)
	exp : exp . EQUALEQUAL exp  (28)
	exp : exp . LT exp  (29)
	exp : exp . LE exp  (30)
	exp : exp . GT exp  (31)
	exp : exp . GE exp  (32)
	exp : exp . OR exp  (34)
	exp : exp . AND exp  (35)

	PLUS  shift 51
	MINUS  shift 52
	STAR  shift 53
	SLASH  shift 54
	EQUALEQUAL  shift 55
	LE  shift 56
	LT  shift 57
	GE  shift 58
	GT  shift 59
	AND  shift 60
	OR  shift 61
	RPAREN  shift 63
	.  error


state 42
	stmt : WHILE LPAREN exp . RPAREN stmt  (14)
	exp : exp . PLUS exp  (23)
	exp : exp . MINUS exp  (24)
	exp : exp . STAR exp  (25)
	exp : exp . SLASH exp  (26)
	exp : exp . EQUALEQUAL exp  (28)
	exp : exp . LT exp  (29)
	exp : exp . LE exp  (30)
	exp : exp . GT exp  (31)
	exp : exp . GE exp  (32)
	exp : exp . OR exp  (34)
	exp : exp . AND exp  (35)

	PLUS  shift 51
	MINUS  shift 52
	STAR  shift 53
	SLASH  shift 54
	EQUALEQUAL  shift 55
	LE  shift 56
	LT  shift 57
	GE  shift 58
	GT  shift 59
	AND  shift 60
	OR  shift 61
	RPAREN  shift 64
	.  error


state 43
	stmt : DO stmt WHILE . LPAREN exp RPAREN SEMICOLON  (15)

	LPAREN  shift 65
	.  error


state 44
	stmt : READ LPAREN ID . RPAREN SEMICOLON  (16)

	RPAREN  shift 66
	.  error


state 45
	stmt : PRINT LPAREN exp . RPAREN SEMICOLON  (17)
	exp : exp . PLUS exp  (23)
	exp : exp . MINUS exp  (24)
	exp : exp . STAR exp  (25)
	exp : exp . SLASH exp  (26)
	exp : exp . EQUALEQUAL exp  (28)
	exp : exp . LT exp  (29)
	exp : exp . LE exp  (30)
	exp : exp . GT exp  (31)
	exp : exp . GE exp  (32)
	exp : exp . OR exp  (34)
	exp : exp . AND exp  (35)

	PLUS  shift 51
	MINUS  shift 52
	STAR  shift 53
	SLASH  shift 54
	EQUALEQUAL  shift 55
	LE  shift 56
	LT  shift 57
	GE  shift 58
	GT  shift 59
	AND  shift 60
	OR  shift 61
	RPAREN  shift 67
	.  error


state 46
	stmt : lv PLUS PLUS . SEMICOLON  (11)

	SEMICOLON  shift 68
	.  error


state 47
	stmt : lv EQUAL exp . SEMICOLON  (10)
	exp : exp . PLUS exp  (23)
	exp : exp . MINUS exp  (24)
	exp : exp . STAR exp  (25)
	exp : exp . SLASH exp  (26)
	exp : exp . EQUALEQUAL exp  (28)
	exp : exp . LT exp  (29)
	exp : exp . LE exp  (30)
	exp : exp . GT exp  (31)
	exp : exp . GE exp  (32)
	exp : exp . OR exp  (34)
	exp : exp . AND exp  (35)

	PLUS  shift 51
	MINUS  shift 52
	STAR  shift 53
	SLASH  shift 54
	EQUALEQUAL  shift 55
	LE  shift 56
	LT  shift 57
	GE  shift 58
	GT  shift 59
	AND  shift 60
	OR  shift 61
	SEMICOLON  shift 69
	.  error


state 48
	exp : exp . PLUS exp  (23)
	exp : exp . MINUS exp  (24)
	exp : exp . STAR exp  (25)
	exp : exp . SLASH exp  (26)
	exp : MINUS exp .  (27)
	exp : exp . EQUALEQUAL exp  (28)
	exp : exp . LT exp  (29)
	exp : exp . LE exp  (30)
	exp : exp . GT exp  (31)
	exp : exp . GE exp  (32)
	exp : exp . OR exp  (34)
	exp : exp . AND exp  (35)

	.  reduce 27


state 49
	exp : exp . PLUS exp  (23)
	exp : exp . MINUS exp  (24)
	exp : exp . STAR exp  (25)
	exp : exp . SLASH exp  (26)
	exp : exp . EQUALEQUAL exp  (28)
	exp : exp . LT exp  (29)
	exp : exp . LE exp  (30)
	exp : exp . GT exp  (31)
	exp : exp . GE exp  (32)
	exp : NOT exp .  (33)
	exp : exp . OR exp  (34)
	exp : exp . AND exp  (35)

	.  reduce 33


state 50
	exp : exp . PLUS exp  (23)
	exp : exp . MINUS exp  (24)
	exp : exp . STAR exp  (25)
	exp : exp . SLASH exp  (26)
	exp : exp . EQUALEQUAL exp  (28)
	exp : exp . LT exp  (29)
	exp : exp . LE exp  (30)
	exp : exp . GT exp  (31)
	exp : exp . GE exp  (32)
	exp : exp . OR exp  (34)
	exp : exp . AND exp  (35)
	exp : LPAREN exp . RPAREN  (36)

	PLUS  shift 51
	MINUS  shift 52
	STAR  shift 53
	SLASH  shift 54
	EQUALEQUAL  shift 55
	LE  shift 56
	LT  shift 57
	GE  shift 58
	GT  shift 59
	AND  shift 60
	OR  shift 61
	RPAREN  shift 70
	.  error


state 51
	exp : exp PLUS . exp  (23)

	NUM  shift 35
	ID  shift 13
	MINUS  shift 36
	NOT  shift 37
	LPAREN  shift 38
	.  error

	lv  goto 39
	exp  goto 71


state 52
	exp : exp MINUS . exp  (24)

	NUM  shift 35
	ID  shift 13
	MINUS  shift 36
	NOT  shift 37
	LPAREN  shift 38
	.  error

	lv  goto 39
	exp  goto 72


state 53
	exp : exp STAR . exp  (25)

	NUM  shift 35
	ID  shift 13
	MINUS  shift 36
	NOT  shift 37
	LPAREN  shift 38
	.  error

	lv  goto 39
	exp  goto 73


state 54
	exp : exp SLASH . exp  (26)

	NUM  shift 35
	ID  shift 13
	MINUS  shift 36
	NOT  shift 37
	LPAREN  shift 38
	.  error

	lv  goto 39
	exp  goto 74


state 55
	exp : exp EQUALEQUAL . exp  (28)

	NUM  shift 35
	ID  shift 13
	MINUS  shift 36
	NOT  shift 37
	LPAREN  shift 38
	.  error

	lv  goto 39
	exp  goto 75


state 56
	exp : exp LE . exp  (30)

	NUM  shift 35
	ID  shift 13
	MINUS  shift 36
	NOT  shift 37
	LPAREN  shift 38
	.  error

	lv  goto 39
	exp  goto 76


state 57
	exp : exp LT . exp  (29)

	NUM  shift 35
	ID  shift 13
	MINUS  shift 36
	NOT  shift 37
	LPAREN  shift 38
	.  error

	lv  goto 39
	exp  goto 77


state 58
	exp : exp GE . exp  (32)

	NUM  shift 35
	ID  shift 13
	MINUS  shift 36
	NOT  shift 37
	LPAREN  shift 38
	.  error

	lv  goto 39
	exp  goto 78


state 59
	exp : exp GT . exp  (31)

	NUM  shift 35
	ID  shift 13
	MINUS  shift 36
	NOT  shift 37
	LPAREN  shift 38
	.  error

	lv  goto 39
	exp  goto 79


state 60
	exp : exp AND . exp  (35)

	NUM  shift 35
	ID  shift 13
	MINUS  shift 36
	NOT  shift 37
	LPAREN  shift 38
	.  error

	lv  goto 39
	exp  goto 80


state 61
	exp : exp OR . exp  (34)

	NUM  shift 35
	ID  shift 13
	MINUS  shift 36
	NOT  shift 37
	LPAREN  shift 38
	.  error

	lv  goto 39
	exp  goto 81


state 62
	lv : ID LBLOCK exp RBLOCK .  (20)

	.  reduce 20


state 63
	stmt : IF LPAREN exp RPAREN . stmt  (12)
	stmt : IF LPAREN exp RPAREN . stmt ELSE stmt  (13)

	ID  shift 13
	IF  shift 14
	WHILE  shift 15
	DO  shift 16
	READ  shift 17
	PRINT  shift 18
	LBRACE  shift 3
	.  error

	block  goto 20
	stmt  goto 82
	lv  goto 22


state 64
	stmt : WHILE LPAREN exp RPAREN . stmt  (14)

	ID  shift 13
	IF  shift 14
	WHILE  shift 15
	DO  shift 16
	READ  shift 17
	PRINT  shift 18
	LBRACE  shift 3
	.  error

	block  goto 20
	stmt  goto 83
	lv  goto 22


state 65
	stmt : DO stmt WHILE LPAREN . exp RPAREN SEMICOLON  (15)

	NUM  shift 35
	ID  shift 13
	MINUS  shift 36
	NOT  shift 37
	LPAREN  shift 38
	.  error

	lv  goto 39
	exp  goto 84


state 66
	stmt : READ LPAREN ID RPAREN . SEMICOLON  (16)

	SEMICOLON  shift 85
	.  error


state 67
	stmt : PRINT LPAREN exp RPAREN . SEMICOLON  (17)

	SEMICOLON  shift 86
	.  error


state 68
	stmt : lv PLUS PLUS SEMICOLON .  (11)

	.  reduce 11


state 69
	stmt : lv EQUAL exp SEMICOLON .  (10)

	.  reduce 10


state 70
	exp : LPAREN exp RPAREN .  (36)

	.  reduce 36


state 71
	exp : exp . PLUS exp  (23)
	exp : exp PLUS exp .  (23)
	exp : exp . MINUS exp  (24)
	exp : exp . STAR exp  (25)
	exp : exp . SLASH exp  (26)
	exp : exp . EQUALEQUAL exp  (28)
	exp : exp . LT exp  (29)
	exp : exp . LE exp  (30)
	exp : exp . GT exp  (31)
	exp : exp . GE exp  (32)
	exp : exp . OR exp  (34)
	exp : exp . AND exp  (35)

	STAR  shift 53
	SLASH  shift 54
	PLUS  reduce 23
	MINUS  reduce 23
	EQUALEQUAL  reduce 23
	LE  reduce 23
	LT  reduce 23
	GE  reduce 23
	GT  reduce 23
	AND  reduce 23
	OR  reduce 23
	SEMICOLON  reduce 23
	RBLOCK  reduce 23
	RPAREN  reduce 23


state 72
	exp : exp . PLUS exp  (23)
	exp : exp . MINUS exp  (24)
	exp : exp MINUS exp .  (24)
	exp : exp . STAR exp  (25)
	exp : exp . SLASH exp  (26)
	exp : exp . EQUALEQUAL exp  (28)
	exp : exp . LT exp  (29)
	exp : exp . LE exp  (30)
	exp : exp . GT exp  (31)
	exp : exp . GE exp  (32)
	exp : exp . OR exp  (34)
	exp : exp . AND exp  (35)

	STAR  shift 53
	SLASH  shift 54
	PLUS  reduce 24
	MINUS  reduce 24
	EQUALEQUAL  reduce 24
	LE  reduce 24
	LT  reduce 24
	GE  reduce 24
	GT  reduce 24
	AND  reduce 24
	OR  reduce 24
	SEMICOLON  reduce 24
	RBLOCK  reduce 24
	RPAREN  reduce 24


state 73
	exp : exp . PLUS exp  (23)
	exp : exp . MINUS exp  (24)
	exp : exp . STAR exp  (25)
	exp : exp STAR exp .  (25)
	exp : exp . SLASH exp  (26)
	exp : exp . EQUALEQUAL exp  (28)
	exp : exp . LT exp  (29)
	exp : exp . LE exp  (30)
	exp : exp . GT exp  (31)
	exp : exp . GE exp  (32)
	exp : exp . OR exp  (34)
	exp : exp . AND exp  (35)

	.  reduce 25


state 74
	exp : exp . PLUS exp  (23)
	exp : exp . MINUS exp  (24)
	exp : exp . STAR exp  (25)
	exp : exp . SLASH exp  (26)
	exp : exp SLASH exp .  (26)
	exp : exp . EQUALEQUAL exp  (28)
	exp : exp . LT exp  (29)
	exp : exp . LE exp  (30)
	exp : exp . GT exp  (31)
	exp : exp . GE exp  (32)
	exp : exp . OR exp  (34)
	exp : exp . AND exp  (35)

	.  reduce 26


state 75
	exp : exp . PLUS exp  (23)
	exp : exp . MINUS exp  (24)
	exp : exp . STAR exp  (25)
	exp : exp . SLASH exp  (26)
	exp : exp . EQUALEQUAL exp  (28)
	exp : exp EQUALEQUAL exp .  (28)
	exp : exp . LT exp  (29)
	exp : exp . LE exp  (30)
	exp : exp . GT exp  (31)
	exp : exp . GE exp  (32)
	exp : exp . OR exp  (34)
	exp : exp . AND exp  (35)

	PLUS  shift 51
	MINUS  shift 52
	STAR  shift 53
	SLASH  shift 54
	EQUALEQUAL  reduce 28
	LE  reduce 28
	LT  reduce 28
	GE  reduce 28
	GT  reduce 28
	AND  reduce 28
	OR  reduce 28
	SEMICOLON  reduce 28
	RBLOCK  reduce 28
	RPAREN  reduce 28


state 76
	exp : exp . PLUS exp  (23)
	exp : exp . MINUS exp  (24)
	exp : exp . STAR exp  (25)
	exp : exp . SLASH exp  (26)
	exp : exp . EQUALEQUAL exp  (28)
	exp : exp . LT exp  (29)
	exp : exp . LE exp  (30)
	exp : exp LE exp .  (30)
	exp : exp . GT exp  (31)
	exp : exp . GE exp  (32)
	exp : exp . OR exp  (34)
	exp : exp . AND exp  (35)

	PLUS  shift 51
	MINUS  shift 52
	STAR  shift 53
	SLASH  shift 54
	EQUALEQUAL  reduce 30
	LE  reduce 30
	LT  reduce 30
	GE  reduce 30
	GT  reduce 30
	AND  reduce 30
	OR  reduce 30
	SEMICOLON  reduce 30
	RBLOCK  reduce 30
	RPAREN  reduce 30


state 77
	exp : exp . PLUS exp  (23)
	exp : exp . MINUS exp  (24)
	exp : exp . STAR exp  (25)
	exp : exp . SLASH exp  (26)
	exp : exp . EQUALEQUAL exp  (28)
	exp : exp . LT exp  (29)
	exp : exp LT exp .  (29)
	exp : exp . LE exp  (30)
	exp : exp . GT exp  (31)
	exp : exp . GE exp  (32)
	exp : exp . OR exp  (34)
	exp : exp . AND exp  (35)

	PLUS  shift 51
	MINUS  shift 52
	STAR  shift 53
	SLASH  shift 54
	EQUALEQUAL  reduce 29
	LE  reduce 29
	LT  reduce 29
	GE  reduce 29
	GT  reduce 29
	AND  reduce 29
	OR  reduce 29
	SEMICOLON  reduce 29
	RBLOCK  reduce 29
	RPAREN  reduce 29


state 78
	exp : exp . PLUS exp  (23)
	exp : exp . MINUS exp  (24)
	exp : exp . STAR exp  (25)
	exp : exp . SLASH exp  (26)
	exp : exp . EQUALEQUAL exp  (28)
	exp : exp . LT exp  (29)
	exp : exp . LE exp  (30)
	exp : exp . GT exp  (31)
	exp : exp . GE exp  (32)
	exp : exp GE exp .  (32)
	exp : exp . OR exp  (34)
	exp : exp . AND exp  (35)

	PLUS  shift 51
	MINUS  shift 52
	STAR  shift 53
	SLASH  shift 54
	EQUALEQUAL  reduce 32
	LE  reduce 32
	LT  reduce 32
	GE  reduce 32
	GT  reduce 32
	AND  reduce 32
	OR  reduce 32
	SEMICOLON  reduce 32
	RBLOCK  reduce 32
	RPAREN  reduce 32


state 79
	exp : exp . PLUS exp  (23)
	exp : exp . MINUS exp  (24)
	exp : exp . STAR exp  (25)
	exp : exp . SLASH exp  (26)
	exp : exp . EQUALEQUAL exp  (28)
	exp : exp . LT exp  (29)
	exp : exp . LE exp  (30)
	exp : exp . GT exp  (31)
	exp : exp GT exp .  (31)
	exp : exp . GE exp  (32)
	exp : exp . OR exp  (34)
	exp : exp . AND exp  (35)

	PLUS  shift 51
	MINUS  shift 52
	STAR  shift 53
	SLASH  shift 54
	EQUALEQUAL  reduce 31
	LE  reduce 31
	LT  reduce 31
	GE  reduce 31
	GT  reduce 31
	AND  reduce 31
	OR  reduce 31
	SEMICOLON  reduce 31
	RBLOCK  reduce 31
	RPAREN  reduce 31


state 80
	exp : exp . PLUS exp  (23)
	exp : exp . MINUS exp  (24)
	exp : exp . STAR exp  (25)
	exp : exp . SLASH exp  (26)
	exp : exp . EQUALEQUAL exp  (28)
	exp : exp . LT exp  (29)
	exp : exp . LE exp  (30)
	exp : exp . GT exp  (31)
	exp : exp . GE exp  (32)
	exp : exp . OR exp  (34)
	exp : exp . AND exp  (35)
	exp : exp AND exp .  (35)

	PLUS  shift 51
	MINUS  shift 52
	STAR  shift 53
	SLASH  shift 54
	EQUALEQUAL  shift 55
	LE  shift 56
	LT  shift 57
	GE  shift 58
	GT  shift 59
	OR  shift 61
	AND  reduce 35
	SEMICOLON  reduce 35
	RBLOCK  reduce 35
	RPAREN  reduce 35


state 81
	exp : exp . PLUS exp  (23)
	exp : exp . MINUS exp  (24)
	exp : exp . STAR exp  (25)
	exp : exp . SLASH exp  (26)
	exp : exp . EQUALEQUAL exp  (28)
	exp : exp . LT exp  (29)
	exp : exp . LE exp  (30)
	exp : exp . GT exp  (31)
	exp : exp . GE exp  (32)
	exp : exp . OR exp  (34)
	exp : exp OR exp .  (34)
	exp : exp . AND exp  (35)

	PLUS  shift 51
	MINUS  shift 52
	STAR  shift 53
	SLASH  shift 54
	EQUALEQUAL  shift 55
	LE  shift 56
	LT  shift 57
	GE  shift 58
	GT  shift 59
	AND  reduce 34
	OR  reduce 34
	SEMICOLON  reduce 34
	RBLOCK  reduce 34
	RPAREN  reduce 34


state 82
	stmt : IF LPAREN exp RPAREN stmt .  (12)
	stmt : IF LPAREN exp RPAREN stmt . ELSE stmt  (13)

	ELSE  shift 87
	ID  reduce 12
	IF  reduce 12
	WHILE  reduce 12
	DO  reduce 12
	READ  reduce 12
	PRINT  reduce 12
	LBRACE  reduce 12
	RBRACE  reduce 12


state 83
	stmt : WHILE LPAREN exp RPAREN stmt .  (14)

	.  reduce 14


state 84
	stmt : DO stmt WHILE LPAREN exp . RPAREN SEMICOLON  (15)
	exp : exp . PLUS exp  (23)
	exp : exp . MINUS exp  (24)
	exp : exp . STAR exp  (25)
	exp : exp . SLASH exp  (26)
	exp : exp . EQUALEQUAL exp  (28)
	exp : exp . LT exp  (29)
	exp : exp . LE exp  (30)
	exp : exp . GT exp  (31)
	exp : exp . GE exp  (32)
	exp : exp . OR exp  (34)
	exp : exp . AND exp  (35)

	PLUS  shift 51
	MINUS  shift 52
	STAR  shift 53
	SLASH  shift 54
	EQUALEQUAL  shift 55
	LE  shift 56
	LT  shift 57
	GE  shift 58
	GT  shift 59
	AND  shift 60
	OR  shift 61
	RPAREN  shift 88
	.  error


state 85
	stmt : READ LPAREN ID RPAREN SEMICOLON .  (16)

	.  reduce 16


state 86
	stmt : PRINT LPAREN exp RPAREN SEMICOLON .  (17)

	.  reduce 17


state 87
	stmt : IF LPAREN exp RPAREN stmt ELSE . stmt  (13)

	ID  shift 13
	IF  shift 14
	WHILE  shift 15
	DO  shift 16
	READ  shift 17
	PRINT  shift 18
	LBRACE  shift 3
	.  error

	block  goto 20
	stmt  goto 89
	lv  goto 22


state 88
	stmt : DO stmt WHILE LPAREN exp RPAREN . SEMICOLON  (15)

	SEMICOLON  shift 90
	.  error


state 89
	stmt : IF LPAREN exp RPAREN stmt ELSE stmt .  (13)

	.  reduce 13


state 90
	stmt : DO stmt WHILE LPAREN exp RPAREN SEMICOLON .  (15)

	.  reduce 15


35 terminals, 11 nonterminals
38 grammar rules, 91 states
